fixed minor styling, image view on mobile

--- a/mywebsite/src/CSS/_navbar.css
+++ b/mywebsite/src/CSS/_navbar.css
@@ -40,6 +40,7 @@
 #toggle {
   background-color: rgba(122, 128, 133, 0.5);
   margin: 5px;
-  border: solid 1px white;
+  border: solid 1px var(--color);
+  color: white;
   /* color: white; */
 }
